added comment module ,  vote module , updated post module to support images and links