@@ -10,6 +10,7 @@ import com.forumly.forumly.Mappers.CategoryMappers;
 import com.forumly.forumly.Mappers.PostMappers;
 import com.forumly.forumly.entity.Category;
 import com.forumly.forumly.entity.Post;
+import java.util.List;
 import com.forumly.forumly.service.CategoryService;
 
 import java.util.*;
@@ -26,6 +27,9 @@ public class CategoryController {
     @Autowired
     private CategoryMappers categoryMapper;
 
+    @Autowired
+    private PostMappers postMapper;
+
     @GetMapping
     public ResponseEntity<List<CategoryDTO>> getAllCategories() {
         List<CategoryDTO> dtos = categoryService.getAllCategories().stream()
@@ -39,13 +43,12 @@ public class CategoryController {
         Category saved = categoryService.createCategory(category);
         return ResponseEntity.ok(categoryMapper.toDTO(saved));
     }
-
-    @GetMapping("/{id}/posts")
-    public ResponseEntity<List<PostDTO>> getPostsByCategory(@PathVariable Long id) {
-        Category category = categoryService.getCategoryById(id);
-        List<PostDTO> posts = category.getPosts().stream()
-                .map(PostMappers.INSTANCE::toDTO)
-                .toList();
-        return ResponseEntity.ok(posts);
-    }
+        @GetMapping("/{id}/posts")
+            public ResponseEntity<List<PostDTO>> getPostsByCategory(@PathVariable Long id) {
+                Category category = categoryService.getCategoryById(id);
+                List<PostDTO> posts = category.getPosts().stream()
+                        .map(postMapper::toDTO)   // ✅ fixed
+                        .collect(Collectors.toList());
+                return ResponseEntity.ok(posts);
+            }
 }
